--- a/inten.css
+++ b/inten.css
@@ -3,7 +3,7 @@ body{
     background-color: black;
 }
 .l{
-    background-image: url(inttenimg.jpg) ;
+    background-image: url(inttenimg.jpg)  ;
     background-position: center; 
     width: 100%;
     height:600px;
@@ -47,45 +47,41 @@ button{
  .column1{
   display: inline-block;
     width: 300px;
-    padding: 10px;
+    padding: 2%;
     margin-left: 200px;
-    
     color: white;
     font-size: 20px;
 }
 .column2{
   display: inline-block;
     width: 300px;
-    padding: 10px;
-   
+    padding: 2%;
     color:white;
     font-size: 20px;
 }
 .column3{
   width: 300px;
   display: inline-block;
-  padding: 10px;
-  
+  padding: 2%;
   color:white;
   font-size: 20px;
 }
 
-.row::after {
+.row ::after {
   display: inline-block;
   margin-bottom: 20px;
-  padding: 30px;
   
 }
 img{
   border-radius: 10px;
 }
 .last{
-  background-color: #ddd;
+  background-color: rgb(255, 255, 255);
   font-size: larger;
   font-style: oblique;
   padding-left: 100px;
   height:500px;
-  
+  margin-top: 3%;
   display: flex;
   flex-direction: row;
 }
@@ -95,6 +91,10 @@ img{
   height: 100%;
   padding-left: 30px;
   }
-  .btn{
+  .btn:hover{
     background-color: black;
+    color: white;
+    font-size: large;
+    padding: 4px;
   }
+  
