Pending changes exported from your codespace

--- a/inten.css
+++ b/inten.css
@@ -8,7 +8,7 @@ body{
     width: 100%;
     height:600px;
     font-size: xx-large;
-    font:Sans-serif;
+    font-family:Sans-serif;
     padding-left: 160px;
     border-radius: 10px;
     margin-top: -45px;
